<resources>
    <string name="app_name">FUPS</string>
    <string name="login_top_description">GSM numaranı ve şifreni girerek\nFUPS hesabına giriş yapabilirsin.</string>
    <string name="login">GİRİŞ</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="country_code">Ülke Kodu</string>
    <string name="gsm_number">GSM Numaran</string>
    <string name="password">Şifren</string>
    <string name="acoount_provider">HESABINLA NELER YAPABİLİRSİN?</string>

    <string-array name="codes">
        <item>+90</item>
        <item>+91</item>
        <item>+92</item>
        <item>+93</item>
    </string-array>
</resources>